--- a/Deal_Memo_Standard/template.cfg
+++ b/Deal_Memo_Standard/template.cfg
@@ -2,11 +2,11 @@
 cover-page = true
 table-of-contents = true
 strip-internal-info = true
-heading-numbers = true
+heading-numbers = false
 
 [metadata]
-title = Export, convert, rest
+title =  
 subtitle = Turn your Notion content into branded PDFs
-project = Notion Export Prettify
-# date = April 2024
-author = Fabre Lambeau
+project = Investment Memo
+date = Q4 2024
+author =   
